--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <details>
-<summary>
+<summary>show full code</summary>
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -2422,5 +2422,4 @@
     </div> 
 </body>
 </html>
-</summary>
 </details>
